--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 <li><a href="/services.html">Services</a></li>
                 <li><a href="/contacts.html">Contacts</a></li>
             </ul>
-            <button>Get Started</button>
         </div>
     </nav>
 
@@ -41,9 +40,12 @@
     =============================== 
     -->
     <div class="hero">
-        <!-- <img src="/hero.jpg"> -->
+        <div class="heroContent">
+        <p>SPL Digital Marketing Group</p>
         <h1>Digital Marketing &</h1>
         <h1>Solutions</h1>
+        <button>Get Started</button>
+        </div>
     </div>
     
    
