--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         Navigation Bar 
     =============================== 
     -->
-    <nav>
+    <nav class="nav-bar">
         <div class="logo">
-            <div>
-                <img src="./favicon.webp">
-            </div>
-            <div>
-                <p>SPL Digital Marketing Group</p>
-            </div>
+          <div>
+            <img src="./favicon.webp">
+          </div>
+          <div>
+            <p>SPL Digital Marketing Group</p>
+          </div>
         </div>
         <div class="naviLinks">
-            <ul>
-                <li><a href="/#">HOME</a></li>
-                <li><a href="/aboutus.html">About Us</a></li>
-                <li><a href="/services.html">Services</a></li>
-                <li><a href="/contacts.html">Contacts</a></li>
-            </ul>
+          <ul>
+            <li><a href="/#">HOME</a></li>
+            <li><a href="/aboutus.html">About Us</a></li>
+            <li><a href="/services.html">Services</a></li>
+            <li><a href="/contacts.html">Contacts</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
 
     <!-- 
     =============================== 
@@ -50,4 +50,5 @@
     
    
 </body>
+<script src="script.js"></script>
 </html>
