--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <div class="hero">
         <div class="heroContent">
         <p>SPL Digital Marketing Group</p>
-        <h1>Digital Marketing &</h1>
-        <h1>Solutions</h1>
+        <h1>Digital Marketing & <br>Solutions</h1>
         <button>Get Started</button>
         </div>
     </div>
