hero and navbar section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.webp">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
+    <script src="https://kit.fontawesome.com/69a126a24e.js" crossorigin="anonymous"></script>
     <title>SPL Digital Marketing Group</title>
 </head>
 <body>
@@ -17,7 +19,7 @@
     -->
     <nav class="nav-bar">
         <div class="logo">
-          <div>
+          <div class="imageContainer">
             <img src="./favicon.webp">
           </div>
           <div>
@@ -31,7 +33,17 @@
             <li><a href="/services.html">Services</a></li>
             <li><a href="/contacts.html">Contacts</a></li>
           </ul>
+
+          <div class="messageContainer">
+            <i><lord-icon
+              src="https://cdn.lordicon.com/zpxybbhl.json"
+              trigger="hover"
+              colors="primary:#e4e4e4,secondary:#08a88a"
+              style="width:70px;height:70px">
+            </lord-icon></i>
+          </div>
         </div>
+        
       </nav>
 
     <!-- 
@@ -43,7 +55,7 @@
         <div class="heroContent">
         <p>SPL Digital Marketing Group</p>
         <h1>Digital Marketing & <br>Solutions</h1>
-        <button>Get Started</button>
+        <button>Get Started <i class="fa-solid fa-angles-right"></i></button>
         </div>
     </div>
     
