--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
           <div class="imageContainer">
             <img src="./favicon.webp">
           </div>
-          <div>
-            <p>SPL Digital Marketing Group</p>
+          <div class="logoTxt">
+            <h2>SPL</h2>
+            <p>Digital Marketing<br>Group</p>
           </div>
         </a>
         </div>
