body second section

--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
 
       <div class="txtContent">
         <h1>Delivering exceptional results</h1>
-        <p>Welcome to SPL Digital Marketing Group, A Comprehensive Digital Marketing that Offers extensive services for your Success.e are a team of passionate digital marketing experts who specialize in creating effective marketing strategies that help businesses grow and succeed online. From search engine optimization to social media marketing, PPC advertising, and web design, we provide a comprehensive range of services that are tailored to meet the unique needs of each client.</p>
-        <p> With our innovative approach and cutting-edge techniques, we help businesses establish a strong online presence and reach their target audience effectively. Let us help you take your business to the next level with our top-notch digital marketing solutions.</p>
+        <p>Through our 5 years of existence, we are able to execute great ideas in a short time, by working on various companies we are able to distinguish their specific needs and give them exceptional results, working as a team give us the benefit to refresh our perspective and create the exciting the possibilityof tackling complex challenges. Our experience has taught us the importance of effective communication, time management, and flexibility when it comes to meeting project deadlines and achieving results.
+        </p>
+        <p>
+          As a result of our success, we have developed a reputation for being a reliable and efficient team that consistently delivers high-quality work. We take pride in our ability to adapt to new challenges and technologies, which allows us to stay ahead of the curve and provide innovative solutions to our clients.
+        </p>
+        
       </div>
       
     </div>
