--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
 
       <div class="txtContent">
-        <h1>Delivering exceptional results</h1>
+        <h1>Delivering High-Quality Solutions</h1>
         <p>Through our 5 years of existence, we are able to execute great ideas in a short time, by working on various companies we are able to distinguish their specific needs and give them exceptional results, working as a team give us the benefit to refresh our perspective and create the exciting the possibilityof tackling complex challenges. Our experience has taught us the importance of effective communication, time management, and flexibility when it comes to meeting project deadlines and achieving results.
         </p>
         <p>
