--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
     -->
     <div class="firstBody secBody" data-aos="fade-up">
       <div class="imgContent">
-        <img src="./5years.png" alt="">
-        <h1>CONSISTENCY</h1>
+        <img src="./gen.png" alt="">
       </div>
 
       <div class="txtContent">
