--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>SPL Digital Marketing Group</title>
 </head>
 <body>
+  
 
     <!-- 
     =============================== 
@@ -66,7 +67,7 @@
         <button>Get Started <i class="fa-solid fa-angles-right"></i></button>
         </div>
     </div>
-    
+    <div class="body-container">
         <!-- 
     =============================== 
         Body 1st section 
@@ -128,7 +129,7 @@
       </div>
       
     </div>
-
+  </div>
 
 
 <footer>
