--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <div class="naviLinks">
           <ul>
-            <li><a href="/#">HOME</a></li>
+            <li><a href="/index.html">HOME</a></li>
             <li><a href="/aboutus.html">About Us</a></li>
             <li><a href="/services.html">Services</a></li>
             <li><a href="/contacts.html">Contacts</a></li>
