--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     -->
     <nav class="nav-bar">
       
-        <div class="logo">
+        <div class="logo navlogo">
           <a href="#">
           <div class="imageContainer">
             <img src="./favicon.webp">
@@ -45,7 +45,7 @@
 
           <div class="messageContainer">
             <i><lord-icon
-              src="https://cdn.lordicon.com/zpxybbhl.json"
+              src="https://cdn.lordicon.com/ltxkhbfa.json"
               trigger="morph"
               colors="primary:#e4e4e4,secondary:#08a88a"
               style="width:70px;height:70px">
@@ -147,7 +147,7 @@
   </div>
 
   <div class="quicks">
-    <ul> Quick Links
+    <ul>
       <li><a href="/#">HOME</a></li>
       <li><a href="/aboutus.html">About Us</a></li>
       <li><a href="/services.html">Services</a></li>
@@ -155,11 +155,11 @@
     </ul>
   </div>
 
-  <div class="contacts">
+  <!-- <div class="contacts">
     <h3>Address</h3>
     <h3>Telephone</h3>
     <h3>Email</h3>
-  </div>
+  </div> -->
 </footer>
 
 
