--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
     </ul>
   </div>
 
-  <!-- <div class="contacts">
-    <h3>Address</h3>
-    <h3>Telephone</h3>
-    <h3>Email</h3>
-  </div> -->
+  <div class="contacts">
+    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+  </div>
 </footer>
 
 
