--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     =============================== 
     -->
     <div class="firstBody" data-aos="fade-up">
-      <div class="txtContent">
+      <div class="txtContent ">
         <h1>Delivering exceptional results</h1>
         <p>Welcome to SPL Digital Marketing Group, A Comprehensive Digital Marketing that Offers extensive services for your Success.e are a team of passionate digital marketing experts who specialize in creating effective marketing strategies that help businesses grow and succeed online. From search engine optimization to social media marketing, PPC advertising, and web design, we provide a comprehensive range of services that are tailored to meet the unique needs of each client.</p>
         <p> With our innovative approach and cutting-edge techniques, we help businesses establish a strong online presence and reach their target audience effectively. Let us help you take your business to the next level with our top-notch digital marketing solutions.</p>
@@ -156,9 +156,9 @@
   </div>
 
   <div class="contacts">
-    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/company/spl-digital-marketing-group/"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://www.facebook.com/spldigitalmarketingg/"><i class="fa-brands fa-facebook-f"></i></a>
+    <a href="https://www.instagram.com/spldmg/?hl=en"><i class="fa-brands fa-instagram"></i></a>
   </div>
 </footer>
 
