--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p> With our innovative approach and cutting-edge techniques, we help businesses establish a strong online presence and reach their target audience effectively. Let us help you take your business to the next level with our top-notch digital marketing solutions.</p>
       </div>
       <div class="imgContent">
-        <img src="./5years.png" alt="">
+        <img src="./5years.png" alt="" data-aos="fade-up">
         <h1>CONSISTENCY</h1>
       </div>
     </div>
