--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@
 
           <div class="messageContainer">
             <i><lord-icon
-              src="https://cdn.lordicon.com/zpxybbhl.json"
+              src="https://cdn.lordicon.com/ltxkhbfa.json"
               trigger="morph"
               colors="primary:#e4e4e4,secondary:#08a88a"
               style="width:70px;height:70px">
@@ -53,6 +53,20 @@
         </div>
         
       </nav>
+
+    <!-- 
+    =============================== 
+        HERO Section
+    =============================== 
+    -->
+
+      <div class="pagesHero" >
+        <div class="heroContainer">
+          <div class="heroTitle">
+          <h1>About Us</h1>
+          </div>
+        </div>
+      </div>
     
 </body>
 </html>
