--- a/contacts.html
+++ b/contacts.html
@@ -53,6 +53,20 @@
         </div>
         
       </nav>
+
+          <!-- 
+    =============================== 
+        HERO Section
+    =============================== 
+    -->
+
+    <div class="pagesHero" >
+      <div class="heroContainer">
+        <div class="heroTitle">
+        <h1>Connect with Us</h1>
+        </div>
+      </div>
+    </div>
     
 </body>
 </html>
