--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
 
           <div class="messageContainer">
             <i><lord-icon
-              src="https://cdn.lordicon.com/zpxybbhl.json"
+              src="https://cdn.lordicon.com/ltxkhbfa.json"
               trigger="morph"
               colors="primary:#e4e4e4,secondary:#08a88a"
               style="width:70px;height:70px">
@@ -60,9 +60,9 @@
     =============================== 
     -->
 
-    <div class="pagesHero" >
-      <div class="heroContainer">
-        <div class="heroTitle">
+    <div class="serviceHero" >
+      <div class="serviceContainer">
+        <div class="serviceHeroTitle">
         <h1>What WE Offer</h1>
         </div>
       </div>
