--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
 
 <footer>
+  <div class="footContainer">
   <div class="logo footlogo">
     <a href="#">
     <div class="imageContainer">
@@ -160,6 +161,7 @@
     <a href="https://www.facebook.com/spldigitalmarketingg/"><i class="fa-brands fa-facebook-f"></i></a>
     <a href="https://www.instagram.com/spldmg/?hl=en"><i class="fa-brands fa-instagram"></i></a>
   </div>
+</div>
 </footer>
 
 
