--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.webp">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsiveness.css">
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
     <script src="https://kit.fontawesome.com/69a126a24e.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -67,6 +68,34 @@
           </div>
         </div>
       </div>
+
+          <!-- 
+    =============================== 
+        About Body Section
+    =============================== 
+    -->
+
+    <div class="body-content">
+      <div class="imgSec">
+        <div class="imgSec-container">
+          <h1>WHY US</h1>
+        </div>
+      </div>
+      <div class="abtContent">
+        <h1>Who we are</h1>
+        <p>Since our humble beginnings in 2013 with a single client, our unwavering dedication and passion for work have propelled us on an incredible journey. In 2015, we expanded our team, recruiting enthusiastic and passionate freelancers who shared our vision, uniting us with one mission and vision. With great courage, we approached each project, going beyond the ordinary to deliver exceptional results. Our commitment to excellence and a collaborative work environment fostered innovation, allowing us to consistently exceed expectations. Today, we are a company driven by unwavering passion, dedicated to exceeding expectations, and creating a brighter future for our clients and ourselves.</p>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
     
 </body>
+<script src="script.js"></script>
 </html>
