--- a/aboutus.html
+++ b/aboutus.html
@@ -84,8 +84,24 @@
       <div class="abtContent">
         <h1>Who we are</h1>
         <h2>SPL Digital Marketing</h2>
-        <p>Since our humble beginnings in 2013 with a single client, our unwavering dedication and passion for work have propelled us on an incredible journey. In 2015, we expanded our team, recruiting enthusiastic and passionate freelancers who shared our vision, uniting us with one mission and vision. With great courage, we approached each project, going beyond the ordinary to deliver exceptional results. Our commitment to excellence and a collaborative work environment fostered innovation, allowing us to consistently exceed expectations. Today, we are a company driven by unwavering passion, dedicated to exceeding expectations, and creating a brighter future for our clients and ourselves.</p>
+        <p class="abtxt">Since our humble beginnings in 2013 with a single client, our unwavering dedication and passion for work have propelled us on an incredible journey. In 2015, we expanded our team, recruiting enthusiastic and passionate freelancers who shared our vision, uniting us with one mission and vision. With great courage, we approached each project, going beyond the ordinary to deliver exceptional results. Our commitment to excellence and a collaborative work environment fostered innovation, allowing us to consistently exceed expectations. Today, we are a company driven by unwavering passion, dedicated to exceeding expectations, and creating a brighter future for our clients and ourselves.</p>
+
+        <div class="rate">
+          <div class="star">
+            <i class="fa-solid fa-star"></i>
+            <div class="startype">
+              <h1>4.9/5</h1>
+              <p>by Clients</p>
+            </div>
+          </div>
+          <div class="proj">
+            <h1>25k</h1>
+            <p>MIN <br> Project Size</p>
+          </div>
+        </div>  
       </div>
+
+
     </div>
 
 
